--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-/v0.2.*tar.gz
+/v0.2.5.tar.gz
+/v0.2.7.tar.gz
+/v0.2.8.tar.gz
+/v0.2.9.tar.gz
+/v0.2.10.tar.gz
+/v0.2.11.tar.gz
+/v0.2.12.tar.gz
+/v0.2.13.tar.gz
+/v0.2.14.tar.gz
+/v0.2.15.tar.gz
+/v0.2.16.tar.gz
+/openblas-0.2.17.tar.gz
+/v0.2.18.tar.gz
